--- a/languages/advanced-ads-de_DE.po
+++ b/languages/advanced-ads-de_DE.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Advanced Ads v1.4.1\n"
+"Project-Id-Version: Advanced Ads v1.4.2\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/plugins/plugin-name\n"
 "POT-Creation-Date: 2015-01-28 20:07+0100\n"
-"PO-Revision-Date: 2015-03-03 17:06:25+0000\n"
+"PO-Revision-Date: 2015-03-21 20:32:11+0000\n"
 "Last-Translator: Thomas Maier <post@webzunft.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -20,22 +20,21 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Textdomain-Support: yes"
 
-#: admin/class-advanced-ads-admin.php:192
+#: admin/class-advanced-ads-admin.php:196
 #@ advanced-ads
 msgid "Overview"
 msgstr "Übersicht"
 
 #. translators: plugin header field 'Name'
-#: admin/class-advanced-ads-admin.php:192
+#: admin/class-advanced-ads-admin.php:196
 #: advanced-ads.php:0
 #: classes/widget.php:21
 #@ advanced-ads
 msgid "Advanced Ads"
 msgstr "Advanced Ads"
 
-#: admin/class-advanced-ads-admin.php:196
+#: admin/class-advanced-ads-admin.php:200
 #: admin/includes/class-ad-groups-list-table.php:191
-#: admin/views/overview.php:12
 #: admin/views/placements.php:91
 #: classes/widget.php:66
 #: public/class-advanced-ads.php:550
@@ -43,183 +42,177 @@ msgstr "Advanced Ads"
 msgid "Ads"
 msgstr "Anzeigen"
 
-#: admin/class-advanced-ads-admin.php:200
+#: admin/class-advanced-ads-admin.php:204
 #: admin/views/placements.php:84
 #: classes/widget.php:59
 #@ advanced-ads
 msgid "Ad Groups"
 msgstr "Anzeigen-Gruppen"
 
-#: admin/class-advanced-ads-admin.php:200
-#: admin/views/overview.php:40
+#: admin/class-advanced-ads-admin.php:204
 #: public/class-advanced-ads.php:524
 #@ advanced-ads
 msgid "Groups"
 msgstr "Gruppen"
 
-#: admin/class-advanced-ads-admin.php:205
+#: admin/class-advanced-ads-admin.php:209
 #: admin/views/debug.php:19
 #@ advanced-ads
 msgid "Ad Placements"
 msgstr "Anzeigen-Platzierungen"
 
-#: admin/class-advanced-ads-admin.php:205
-#: admin/views/overview.php:66
+#: admin/class-advanced-ads-admin.php:209
 #: admin/views/placements.php:47
 #@ advanced-ads
 msgid "Placements"
 msgstr "Platzierungen"
 
-#: admin/class-advanced-ads-admin.php:209
+#: admin/class-advanced-ads-admin.php:213
 #@ advanced-ads
 msgid "Advanced Ads Settings"
 msgstr "Advanced-Ads-Einstellungen"
 
-#: admin/class-advanced-ads-admin.php:209
-#: admin/class-advanced-ads-admin.php:390
+#: admin/class-advanced-ads-admin.php:213
+#: admin/class-advanced-ads-admin.php:402
 #: admin/views/debug.php:13
 #@ advanced-ads
 msgid "Settings"
 msgstr "Einstellungen"
 
-#: admin/class-advanced-ads-admin.php:212
+#: admin/class-advanced-ads-admin.php:216
 #@ advanced-ads
 msgid "Advanced Ads Debugging"
 msgstr "Advanced-Ads-Fehleranalyse (Debugging)"
 
-#: admin/class-advanced-ads-admin.php:212
+#: admin/class-advanced-ads-admin.php:216
 #@ advanced-ads
 msgid "Debug"
 msgstr "Debug"
 
-#: admin/class-advanced-ads-admin.php:259
+#: admin/class-advanced-ads-admin.php:271
 #@ advanced-ads
 msgid "Placements updated"
 msgstr "Platzierungen aktualisiert"
 
-#: admin/class-advanced-ads-admin.php:303
-#: admin/class-advanced-ads-admin.php:330
+#: admin/class-advanced-ads-admin.php:315
+#: admin/class-advanced-ads-admin.php:342
 #@ advanced-ads
 msgid "Sorry, you are not allowed to access this feature."
 msgstr "Sie haben leider keinen Zugriff auf diese Funktion"
 
-#: admin/class-advanced-ads-admin.php:316
+#: admin/class-advanced-ads-admin.php:328
 #@ advanced-ads
 msgid "You attempted to edit an ad group that doesn&#8217;t exist. Perhaps it was deleted?"
 msgstr "Sie haben versucht, ein Element, das nicht existiert, zu bearbeiten. Vielleicht wurde es gelöscht?"
 
-#: admin/class-advanced-ads-admin.php:417
+#: admin/class-advanced-ads-admin.php:429
 #@ advanced-ads
 msgid "Ad Type"
 msgstr "Anzeigen-Typ"
 
-#: admin/class-advanced-ads-admin.php:420
+#: admin/class-advanced-ads-admin.php:432
 #@ advanced-ads
 msgid "Ad Parameters"
 msgstr "Anzeigen-Parameter"
 
-#: admin/class-advanced-ads-admin.php:423
+#: admin/class-advanced-ads-admin.php:435
 #@ advanced-ads
 msgid "Layout / Output"
 msgstr "Layout / Ausgabe"
 
-#: admin/class-advanced-ads-admin.php:426
+#: admin/class-advanced-ads-admin.php:438
 #@ advanced-ads
 msgid "Display Conditions"
 msgstr "Anzeige-Bedingungen"
 
-#: admin/class-advanced-ads-admin.php:429
+#: admin/class-advanced-ads-admin.php:441
 #@ advanced-ads
 msgid "Visitor Conditions"
 msgstr "Besucher-Bedingungen"
 
-#: admin/class-advanced-ads-admin.php:591
+#: admin/class-advanced-ads-admin.php:603
 #@ advanced-ads
 msgid "General"
 msgstr "Allgemein"
 
-#: admin/class-advanced-ads-admin.php:599
+#: admin/class-advanced-ads-admin.php:611
 #@ advanced-ads
 msgid "Disable ads"
 msgstr "Anzeigen auf dieser Seite deaktivieren."
 
-#: admin/class-advanced-ads-admin.php:607
+#: admin/class-advanced-ads-admin.php:619
 #@ advanced-ads
 msgid "Hide ads for logged in users"
 msgstr "Verstecke Anzeigen vor eingeloggten Benutzern"
 
-#: admin/class-advanced-ads-admin.php:615
+#: admin/class-advanced-ads-admin.php:627
 #@ advanced-ads
 msgid "Use advanced JavaScript"
 msgstr "Advanced-JavaScript benutzen"
 
-#: admin/class-advanced-ads-admin.php:673
+#: admin/class-advanced-ads-admin.php:685
 #@ advanced-ads
 msgid "(display to all)"
 msgstr "(für alle sichtbar)"
 
-#: admin/class-advanced-ads-admin.php:674
+#: admin/class-advanced-ads-admin.php:686
 #@ advanced-ads
 msgid "Subscriber"
 msgstr "Abonnent"
 
-#: admin/class-advanced-ads-admin.php:675
+#: admin/class-advanced-ads-admin.php:687
 #@ advanced-ads
 msgid "Contributor"
 msgstr "Mitarbeiter"
 
-#: admin/class-advanced-ads-admin.php:676
+#: admin/class-advanced-ads-admin.php:688
 #@ advanced-ads
 msgid "Author"
 msgstr "Autor"
 
-#: admin/class-advanced-ads-admin.php:677
+#: admin/class-advanced-ads-admin.php:689
 #@ advanced-ads
 msgid "Editor"
 msgstr "Redakteur"
 
-#: admin/class-advanced-ads-admin.php:678
+#: admin/class-advanced-ads-admin.php:690
 #@ advanced-ads
 msgid "Admin"
 msgstr "Admin"
 
-#: admin/class-advanced-ads-admin.php:686
+#: admin/class-advanced-ads-admin.php:698
 #@ advanced-ads
 msgid "Choose the lowest role a user must have in order to not see any ads."
 msgstr "Wählen Sie die niedrigste Rolle die ein Benutzer haben muss um keine Anzeigen zu sehen."
 
-#: admin/class-advanced-ads-admin.php:699
+#: admin/class-advanced-ads-admin.php:711
 #, php-format
 #@ advanced-ads
 msgid "Only enable this if you can and want to use the advanced JavaScript functions described <a href=\"%s\">here</a>."
 msgstr "Aktivieren Sie dies nur, wenn Sie die erweiterten und <a href=\"%s\">hier</a> beschriebenen Advanced-JavaScript-Funktionen verwenden können und wollen."
 
-#: admin/class-advanced-ads-admin.php:729
+#: admin/class-advanced-ads-admin.php:741
 #@ advanced-ads
 msgid "Ad Details"
 msgstr "Anzeigeneinstellungen"
 
-#: admin/class-advanced-ads-admin.php:803
+#: admin/class-advanced-ads-admin.php:815
 #@ advanced-ads
 msgid "Ad Settings"
 msgstr "Anzeigen-Einstellungen"
 
-#: admin/class-advanced-ads-admin.php:878
+#: admin/class-advanced-ads-admin.php:889
+#: admin/views/overview.php:23
 #@ advanced-ads
 msgid "Ads Dashboard"
 msgstr "Anzeigen-Dashboard"
 
-#: admin/class-advanced-ads-admin.php:889
-#@ default
-msgid "Tutorials and News"
-msgstr "Anleitungen und Neuigkeiten"
-
-#: admin/class-advanced-ads-admin.php:910
+#: admin/class-advanced-ads-admin.php:932
 #@ advanced-ads
 msgid "plugin manual and homepage"
 msgstr "Plugin-Anleitung und Homepage"
 
-#: admin/class-advanced-ads-admin.php:914
+#: admin/class-advanced-ads-admin.php:901
 #@ advanced-ads
 msgid "From the ad optimization universe"
 msgstr "Neues aus dem Anzeigen-Universum"
@@ -866,130 +859,52 @@ msgstr "Dieser Bildschirm ist in Arbeit. Sie können die Informationen verwenden
 msgid "Ad Condition Overview"
 msgstr "Übersicht der Anzeigen-Bedingungen"
 
-#: admin/views/overview.php:13
+#: admin/includes/class-overview-widgets.php:71
 #@ advanced-ads
 msgid "Ads are the smallest unit, containing the content or a single ad to be displayed."
 msgstr "Anzeigen sind die kleinste Einheit und enthalten Inhalte und Layout."
 
-#: admin/views/overview.php:14
+#: admin/includes/class-overview-widgets.php:72
 #, php-format
 #@ advanced-ads
 msgid "You have published %d ads."
 msgstr "Sie haben %d Anzeigen veröffentlicht."
 
-#: admin/views/overview.php:15
+#: admin/includes/class-overview-widgets.php:73
 #, php-format
 #@ advanced-ads
 msgid "<a href=\"%s\">Manage</a> them or <a href=\"%s\">create</a> a new one"
 msgstr "Anzeigen <a href=\"%s\">verwalten</a> oder neue <a href=\"%s\">erstellen</a>"
 
-#: admin/views/overview.php:23
-#@ advanced-ads
-msgid "recent ads"
-msgstr "Neueste Anzeigen"
-
-#: admin/views/overview.php:33
+#: admin/includes/class-overview-widgets.php:94
 #@ advanced-ads
 msgid "Create your first ad"
 msgstr "Erstellen Sie Ihre erste Anzeige"
 
-#: admin/views/overview.php:41
+#: admin/includes/class-overview-widgets.php:97
 #@ advanced-ads
 msgid "Ad Groups contain ads and are currently used to rotate multiple ads on a single spot."
 msgstr "Anzeigengruppen enthalten Anzeigen und werden verwendet, um mehrere Anzeigen an einer Stelle zu rotieren."
 
-#: admin/views/overview.php:42
-#, php-format
-#@ advanced-ads
-msgid "You have %d groups."
-msgstr "Sie haben %d Gruppen."
-
-#: admin/views/overview.php:43
-#: admin/views/overview.php:69
-#, php-format
-#@ advanced-ads
-msgid "<a href=\"%s\">Manage</a> them."
-msgstr "<a href=\"%s\">Verwalten</a>"
-
-#: admin/views/overview.php:49
-#@ advanced-ads
-msgid "recent groups"
-msgstr "Neueste Gruppen"
-
-#: admin/views/overview.php:59
+#: admin/includes/class-overview-widgets.php:99
 #@ advanced-ads
 msgid "Create your first group"
 msgstr "Erstellen Sie Ihre erste Gruppe"
 
-#: admin/views/overview.php:67
+#: admin/includes/class-overview-widgets.php:102
 #@ advanced-ads
 msgid "Ad Placements are the best way to manage where to display ads and groups."
 msgstr "Anzeigen-Platzierungen sind am besten geeignet um zu bestimmen, wo Anzeigen und Gruppen veröffentlicht werden."
 
-#: admin/views/overview.php:68
-#, php-format
-#@ advanced-ads
-msgid "You have %d placements."
-msgstr "Sie haben %d Platzierungen."
-
-#: admin/views/overview.php:75
-#@ advanced-ads
-msgid "recent placements"
-msgstr "Neueste Platzierungen"
-
-#: admin/views/overview.php:85
+#: admin/includes/class-overview-widgets.php:104
 #@ advanced-ads
 msgid "Create your first placement"
 msgstr "Erstellen Sie Ihre erste Platzierung"
 
-#: admin/views/overview.php:93
+#: admin/includes/class-overview-widgets.php:49
 #@ advanced-ads
 msgid "Manual and Support"
 msgstr "Anleitung und Support"
-
-#: admin/views/overview.php:94
-#@ advanced-ads
-msgid "Need some help? These are your options"
-msgstr "Benötigen Sie weitere Hilfe? Dies sind Ihre Optionen:"
-
-#: admin/views/overview.php:96
-#, php-format
-#@ advanced-ads
-msgid "Visit the <a href=\"%s\">plugin homepage</a>"
-msgstr "Besuchen Sie die <a href=\"%s\">Plugin-Homepage</a>."
-
-#: admin/views/overview.php:97
-#, php-format
-#@ advanced-ads
-msgid "Have a look into the <a href=\"%s\">manual</a>"
-msgstr "Werfen Sie einen Blick in die <a href=\"%s\">Anleitung</a>."
-
-#: admin/views/overview.php:98
-#, php-format
-#@ advanced-ads
-msgid "Ask a question to other users in the <a href=\"%s\">wordpress.org forum</a>"
-msgstr "Fragen Sie andere Nutzer im <a href=\"%s\">wordpress.org forum</a>."
-
-#: admin/views/overview.php:99
-#, php-format
-#@ advanced-ads
-msgid "<a href=\"%s\">Hire the developer</a>"
-msgstr "<a href=\"%s\">Engagieren Sie den Entwickler</a>."
-
-#: admin/views/overview.php:103
-#@ advanced-ads
-msgid "Add-ons"
-msgstr "Add-ons"
-
-#: admin/views/overview.php:104
-#@ advanced-ads
-msgid "Want to boost your ad income? Try these add-ons"
-msgstr "Möchten Sie Ihr Anzeigen-Einkommen steigern? Probieren Sie diese Add-ons"
-
-#: admin/views/overview.php:111
-#@ advanced-ads
-msgid "See Add-Ons"
-msgstr "Add-Ons sehen"
 
 #: admin/views/placements.php:14
 #@ advanced-ads
@@ -1551,7 +1466,7 @@ msgstr ""
 msgid "Execute PHP code (wrapped in <code>&lt;?php ?&gt;</code>)"
 msgstr "PHP Code ausführen (in <code>&lt;?php ?&gt;</code> tags)"
 
-#: admin/class-advanced-ads-admin.php:899
+#: admin/class-advanced-ads-admin.php:921
 #, php-format
 #@ advanced-ads
 msgid "%d ads – <a href=\"%s\">manage</a> - <a href=\"%s\">new</a>"
@@ -1669,21 +1584,15 @@ msgstr " am "
 msgid "Warning : You have not yet entered an AdSense account ID. The plugin won’t work without that"
 msgstr "Achtung: Bitte trage noch eine AdSense-Account-ID in den Einstellungen ein."
 
-#: admin/class-advanced-ads-admin.php:623
+#: admin/class-advanced-ads-admin.php:635
 #@ advanced-ads
 msgid "Priority of content injection filter"
 msgstr "Priorität des Filters für Anzeigen in Beiträgen"
 
-#: admin/class-advanced-ads-admin.php:712
+#: admin/class-advanced-ads-admin.php:724
 #@ advanced-ads
 msgid "Play with this value in order to change the priority of the injected ads compared to other auto injected elements in the post content."
 msgstr "Ändere diesen Wert, wenn du die Reihenfolge der automatisch im Beitrag eingefügten Anzeige im Vergleich zu anderen Elementen ändern willst."
-
-#. translators: plugin header field 'Version'
-#: advanced-ads.php:0
-#@ advanced-ads
-msgid "1.4.1"
-msgstr ""
 
 #: modules/gadsense/admin/views/admin-page.php:27
 #, php-format
@@ -1706,4 +1615,186 @@ msgstr "Beachte: Für die Prüfung des Limits werden nur die Anzeigen herangezog
 #@ advanced-ads
 msgid "Save AdSense Settings"
 msgstr "AdSense Einstellungen speichern"
+
+#: admin/class-advanced-ads-admin.php:910
+#@ advanced-ads
+msgid "Advanced Ads Tutorials"
+msgstr ""
+
+#: admin/includes/class-overview-widgets.php:45
+#@ advanced-ads
+msgid "News and Tutorials"
+msgstr ""
+
+#: admin/includes/class-overview-widgets.php:47
+#@ advanced-ads
+msgid "My Ads"
+msgstr "Meine Anzeigen"
+
+#: admin/includes/class-overview-widgets.php:53
+#@ advanced-ads
+msgid "Tracking and Stats"
+msgstr "Tracking und Statistik"
+
+#: admin/includes/class-overview-widgets.php:55
+#@ advanced-ads
+msgid "Responsive and Mobile ads"
+msgstr "Responsive und Mobile Anzeigen"
+
+#: admin/includes/class-overview-widgets.php:57
+#@ advanced-ads
+msgid "Sticky ads"
+msgstr ""
+
+#: admin/includes/class-overview-widgets.php:59
+#@ advanced-ads
+msgid "PopUps and Layers"
+msgstr "PopUps und Layers"
+
+#: admin/includes/class-overview-widgets.php:109
+#@ advanced-ads
+msgid "Next steps"
+msgstr "Nächste Schritte"
+
+#: admin/includes/class-overview-widgets.php:121
+#, php-format
+#@ advanced-ads
+msgid "<a href=\"%s\" target=\"_blank\">Plugin Homepage</a>"
+msgstr "<a href=\"%s\" target=\"_blank\">Plugin Homepage</a>"
+
+#: admin/includes/class-overview-widgets.php:122
+#, php-format
+#@ advanced-ads
+msgid "<a href=\"%s\" target=\"_blank\">Manual</a>"
+msgstr "<a href=\"%s\" target=\"_blank\">Anleitung</a>"
+
+#: admin/includes/class-overview-widgets.php:123
+#, php-format
+#@ advanced-ads
+msgid "Ask other users in the <a href=\"%s\" target=\"_blank\">wordpress.org forum</a>"
+msgstr "<a href=\"%s\" target=\"_blank\">Nutzerforum</a>"
+
+#: admin/includes/class-overview-widgets.php:124
+#, php-format
+#@ advanced-ads
+msgid "Vote for a <a href=\"%s\" target=\"_blank\">feature</a>"
+msgstr "Über <a href=\"%s\" target=\"_blank\">neue Funktionen</a> abstimmen"
+
+#: admin/includes/class-overview-widgets.php:125
+#, php-format
+#@ advanced-ads
+msgid "<a href=\"%s\" target=\"_blank\">Hire the developer</a>"
+msgstr "<a href=\"%s\" target=\"_blank\">Beauftrage den Entwickler</a>"
+
+#: admin/includes/class-overview-widgets.php:126
+#, php-format
+#@ advanced-ads
+msgid "Thank the developer with a &#9733;&#9733;&#9733;&#9733;&#9733; review on <a href=\"%s\" target=\"_blank\">wordpress.org</a>"
+msgstr "Danke dem Entwickler mit einem &#9733;&#9733;&#9733;&#9733;&#9733; Review auf <a href=\"%s\" target=\"_blank\">wordpress.org</a>"
+
+#: admin/includes/class-overview-widgets.php:135
+#@ advanced-ads
+msgid "Track the impressions of your ads."
+msgstr "Zähle die Einblendungen von Anzeigen."
+
+#: admin/includes/class-overview-widgets.php:136
+#@ advanced-ads
+msgid "2 methods to count impressions"
+msgstr "2 Zählmethoden zur Auswahl"
+
+#: admin/includes/class-overview-widgets.php:137
+#@ advanced-ads
+msgid "beautiful stats for all or single ads"
+msgstr "Wunderschöne Statistiken"
+
+#: admin/includes/class-overview-widgets.php:138
+#@ advanced-ads
+msgid "get stats for predefined and custom persiods"
+msgstr "Werte einen beliebigen Zeitraum aus."
+
+#: admin/includes/class-overview-widgets.php:139
+#@ advanced-ads
+msgid "group stats by day, week or month"
+msgstr "Auswertung nach Tag, Woche und Monat"
+
+#: admin/includes/class-overview-widgets.php:141
+#@ advanced-ads
+msgid "Get the Tracking add-on"
+msgstr "zum Tracking Add-On"
+
+#: admin/includes/class-overview-widgets.php:149
+#@ advanced-ads
+msgid "Display ads based on the size of your visitor’s browser or device."
+msgstr "Zeige Anzeigen anhand der Breite des Browsers deines Besuchers."
+
+#: admin/includes/class-overview-widgets.php:150
+#@ advanced-ads
+msgid "set a range (from … to …) pixels for the browser size"
+msgstr "Lege Spannen (von … bis …) für das Einblenden fest"
+
+#: admin/includes/class-overview-widgets.php:151
+#@ advanced-ads
+msgid "set custom sizes for AdSense responsive ads"
+msgstr "Assistent für Größen von AdSense Anzeigen"
+
+#: admin/includes/class-overview-widgets.php:152
+#@ advanced-ads
+msgid "list all ads by their responsive settings"
+msgstr "Übersicht der responsive Anzeigen"
+
+#: admin/includes/class-overview-widgets.php:154
+#@ advanced-ads
+msgid "Get the Responsive add-on"
+msgstr "zum Responsive Add-On"
+
+#: admin/includes/class-overview-widgets.php:162
+#@ advanced-ads
+msgid "Fix ads to the browser while users are scrolling and create best performing anchor ads."
+msgstr "Fixiere mit-scrollende Anzeigen am Browserfenster"
+
+#: admin/includes/class-overview-widgets.php:163
+#@ advanced-ads
+msgid "position ads that don’t scroll with the screen"
+msgstr "Anzeigen die mit scrollen"
+
+#: admin/includes/class-overview-widgets.php:164
+#@ advanced-ads
+msgid "build anchor ads not only on mobile devices"
+msgstr "Anchor-Anzeigen nicht nur für mobile Geräte"
+
+#: admin/includes/class-overview-widgets.php:166
+#@ advanced-ads
+msgid "Get the Sticky add-on"
+msgstr "zum Sticky Add-On"
+
+#: admin/includes/class-overview-widgets.php:174
+#@ advanced-ads
+msgid "Display content and ads in layers and popups on custom events."
+msgstr "Für sehr performante Anzeigen und Inhalte in Layern und PopUps."
+
+#: admin/includes/class-overview-widgets.php:175
+#@ advanced-ads
+msgid "display a popup after a user interaction like scrolling"
+msgstr "Zeige ein PopUp basierend auf der Nutzeraktion"
+
+#: admin/includes/class-overview-widgets.php:176
+#@ advanced-ads
+msgid "optional backgroup overlay"
+msgstr "Wahlweise mit Hintergrundeinfärbung"
+
+#: admin/includes/class-overview-widgets.php:177
+#@ advanced-ads
+msgid "allow users to close the popup"
+msgstr "Erlaube Nutzern, das Fenster zu schließen"
+
+#: admin/includes/class-overview-widgets.php:179
+#@ advanced-ads
+msgid "Get the PopUp and Layer add-on"
+msgstr "zum PopUp und Layouer Add-On"
+
+#. translators: plugin header field 'Version'
+#: advanced-ads.php:0
+#@ advanced-ads
+msgid "1.4.2"
+msgstr ""
 
